# todo

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: add_todo_cli_presenter.rs  fs_repository.rs  main.rs
entities/: Cargo.toml
entities/src/: lib.rs  todo.rs
fs_repository/: Cargo.toml
fs_repository/src/: lib.rs
src/: app.rs  main.rs
src/app/: domain.rs  file_repository.rs  jsonl_repository.rs  view.rs
src/app/domain/: aggregate.rs  entities.rs  presenter.rs  repository.rs  usecases.rs  waker.rs
usecases/: Cargo.toml
usecases/src/: add_todo_presenter.rs  add_todo_usecase.rs  delete_todo_usecase.rs  edit_todo_interactive_usecase.rs  edit_todo_usecase.rs  lib.rs  todo_deletable.rs  todo_editable.rs  todo_interactive_editable.rs  todo_savable.rs  todo_viewable.rs  view_todo_usecase.rs
