[package]
name = "todo"
version = "0.1.0"
authors = ["Shweta","Reef <public@ralph.tech>"]
edition = "2018"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.4"
serde = { version = "1.0.117", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
async-stream = "0.3.0"
# tokio = { version = "0.3", features = ["full"] }
